--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
           <div class="content has-text-justified">
             <h4>Structural Analysis:</h4>
             <img src="./static/images/Analysis.jpg" alt="process">
-            <p>Content to be filled></p>
+            <p>The system analyzed different sections, with specific attention given to the meshing between gears, a critical area due to the 3D-printed nature of the gears. Potential failure points were identified in three areas: the meshing between the worm and 30T spur gear (Fig. a), 30T and 13T spur gears (Fig. b), and the joint of the contact link and the linkage hub (Fig. c). Figure (d) shows the peak stress mainly on the joint interface of the contact link.
+</p><br><p>In the kinematic analysis of the gripper, two conditions were tested: 1) When the contact link is not obstructed by the object, there is no relative motion between the contact link and the grasping link (Fig. e); 2) When the contact link is obstructed by the object, the grasping link continues to rotate due to the motion of the connecting link (Fig. f). Comparing the plots of both motions, the slope of the position plot is in the range of 8-9 mm/s for Fig. (e) compared to the range of 7-11 mm/s in Fig. (f). The axis of rotation for (e) is node 3, whereas that of (f) is node 5, resulting in faster motion of the gripper when the case is (f) due to the smaller radius of rotation. The motion followed while grasping an object is a combination of both cases (e) and (f).</p>
             <h4>Load Plot:</h4>
             <img src="./static/images/plot.png" alt="process">
             <p>The objects are made to be grasped for 10 iterations from the grip-
