--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="In-hand manipulation, active-surfaces, under-actuated mechanisms,
   bang-bang controller">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Acti-V-Link: An Active Surface, Visual Feedback Based, Mechanically Underactuated Gripper for In-Hand Manipulation</title>
+  <title>An Active Surface, Visual Feedback Based, Mechanically Underactuated Gripper for In-Hand Manipulation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -89,7 +89,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Acti-V-Link: An Active Surface, Visual Feedback Based,            Mechanically Underactuated Gripper for In-Hand Manipulation</h1>
+          <h1 class="title is-1 publication-title">An Active Surface, Visual Feedback Based,            Mechanically Underactuated Gripper for In-Hand Manipulation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://kart1802.github.io">Karthik Swaminathan</a><sup>*</sup>,</span>
@@ -139,15 +139,15 @@
                 </a>
               </span>
               <!-- Code Link. -->
-              <!-- <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+              <span class="link-block">
+                <a href="https://activlink-grip.github.io"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Coming Soon..</span>
                   </a>
-              </span> -->
+              </span>
               <!-- Dataset Link. -->
               <!-- <span class="link-block">
                 <a href="https://github.com/google/nerfies/releases/tag/0.1"
