--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Process of Operation</h2>
         <div class="content has-text-justified">
-          <h4>Workflow of Acti-V-Link:</h4>
+          <h4>Workflow of the gripper:</h4>
           <img src="./static/images/workflow.png" alt="process">
           <p>Initially the object is placed on the gripper to test. Then the gripper starts closing once it tightly grips the object. The feedback of grasping passes from the Dynamixel Motor to the CM510 controller which itself transmits the feedback response to the connected monitor. The logic in the monitor would eventually make the fingers stop. Once the object is gripped, the camera scans the aruco markers attached on the object which has a particular set of operation defined for that object to be performed. Based on the type of object, the operations are performed. Continuous tracking of markers takes place and the feedback to stop the operation is sent once the object reaches it's respective goal position.</p>
           <h4>Experimental Testing:</h4>
