--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/file/d/1BY0qmT6W0sPhzE_7tHbiBcfmpqRReKOS/view?usp=sharing"
+                <a href="https://dl.acm.org/doi/10.1145/3674746.3674796"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
